@@ -1,3 +1,9 @@
+2002-03-29  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c (create_dialog) : remove the startup
+	  warning caused by looking in the current directory for the glade file.
+	(key_theme_changed) : add some protection for missing schemas.
+
 Tue Mar 26 23:27:24 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-keybinding-properties.c (setup_dialog): Only show themes
